kubernetes/security/authentik/authentik/app/route.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  annotations:
    external-dns.alpha.kubernetes.io/target: ipv4.solonsstuff.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Authentik
    gethomepage.dev/description: Identity provider and access management
    gethomepage.dev/group: Applications
    gethomepage.dev/icon: authentik.png
    gethomepage.dev/pod-selector: app.kubernetes.io/name=authentik
spec:
  parentRefs:
    - name: envoy-external
      namespace: networking
      sectionName: https
  hostnames:
    - "sso.${REMOTE_DOMAIN}"
  rules:
    - backendRefs:
        - name: authentik-server
          port: 9000
